test/error/0004-tags2.c
/*
PATTERN: tag
PATTERN: c:7:
*/

struct X;
enum   X;
